--- a/TravelTalk/List/ChatRoomListCollectionViewCell.xib
+++ b/TravelTalk/List/ChatRoomListCollectionViewCell.xib
@@ -17,22 +17,22 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Eff-kE-s31">
-                        <rect key="frame" x="10" y="8" width="123" height="123"/>
+                        <rect key="frame" x="16" y="16" width="107" height="107"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Eff-kE-s31" secondAttribute="height" id="xnn-G7-5ye"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="JEw-hg-f8U">
-                        <rect key="frame" x="143" y="8" width="332" height="123"/>
+                        <rect key="frame" x="139" y="20" width="336" height="99"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDj-pF-efd">
-                                <rect key="frame" x="0.0" y="0.0" width="332" height="61.666666666666664"/>
+                                <rect key="frame" x="0.0" y="0.0" width="336" height="49.666666666666664"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KL6-h0-bSC">
-                                <rect key="frame" x="0.0" y="61.666666666666671" width="332" height="61.333333333333329"/>
+                                <rect key="frame" x="0.0" y="49.666666666666671" width="336" height="49.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -40,7 +40,7 @@
                         </subviews>
                     </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p4i-cJ-cRe">
-                        <rect key="frame" x="485" y="8" width="100" height="30"/>
+                        <rect key="frame" x="485" y="20" width="100" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="TTD-cD-jN6"/>
                         </constraints>
@@ -53,14 +53,14 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="p4i-cJ-cRe" firstAttribute="leading" secondItem="JEw-hg-f8U" secondAttribute="trailing" constant="10" id="94G-gk-Frh"/>
-                <constraint firstItem="Eff-kE-s31" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="D6T-qY-bl5"/>
+                <constraint firstItem="Eff-kE-s31" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="D6T-qY-bl5"/>
                 <constraint firstAttribute="trailing" secondItem="p4i-cJ-cRe" secondAttribute="trailing" constant="10" id="EZk-D4-EDE"/>
-                <constraint firstAttribute="bottom" secondItem="Eff-kE-s31" secondAttribute="bottom" constant="8" id="GkE-05-jLG"/>
-                <constraint firstItem="JEw-hg-f8U" firstAttribute="leading" secondItem="Eff-kE-s31" secondAttribute="trailing" constant="10" id="Jba-aY-1JZ"/>
-                <constraint firstItem="Eff-kE-s31" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="MqB-qn-o8T"/>
+                <constraint firstAttribute="bottom" secondItem="Eff-kE-s31" secondAttribute="bottom" constant="16" id="GkE-05-jLG"/>
+                <constraint firstItem="JEw-hg-f8U" firstAttribute="leading" secondItem="Eff-kE-s31" secondAttribute="trailing" constant="16" id="Jba-aY-1JZ"/>
+                <constraint firstItem="Eff-kE-s31" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="MqB-qn-o8T"/>
                 <constraint firstAttribute="trailing" secondItem="JEw-hg-f8U" secondAttribute="trailing" constant="120" id="UrW-Gx-JTO"/>
-                <constraint firstItem="JEw-hg-f8U" firstAttribute="top" secondItem="Eff-kE-s31" secondAttribute="top" id="lR2-7D-rDV"/>
-                <constraint firstItem="JEw-hg-f8U" firstAttribute="bottom" secondItem="Eff-kE-s31" secondAttribute="bottom" id="qaH-Pj-Vbc"/>
+                <constraint firstItem="JEw-hg-f8U" firstAttribute="top" secondItem="Eff-kE-s31" secondAttribute="top" constant="4" id="lR2-7D-rDV"/>
+                <constraint firstItem="JEw-hg-f8U" firstAttribute="bottom" secondItem="Eff-kE-s31" secondAttribute="bottom" constant="-4" id="qaH-Pj-Vbc"/>
                 <constraint firstItem="p4i-cJ-cRe" firstAttribute="top" secondItem="DDj-pF-efd" secondAttribute="top" id="rse-d6-6lr"/>
             </constraints>
             <size key="customSize" width="595" height="139"/>
