--- a/TravelTalk/Chat/Cell/MyMessageTableViewCell.xib
+++ b/TravelTalk/Chat/Cell/MyMessageTableViewCell.xib
@@ -18,10 +18,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zmm-TM-uhb">
-                        <rect key="frame" x="110" y="2" width="284" height="111"/>
+                        <rect key="frame" x="374" y="2" width="20" height="111"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d34-Tn-342">
-                                <rect key="frame" x="10" y="10" width="264" height="91"/>
+                                <rect key="frame" x="10" y="10" width="0.0" height="91"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -36,9 +36,10 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iul-Dk-KR6">
-                        <rect key="frame" x="4" y="83" width="98" height="30"/>
+                        <rect key="frame" x="264" y="83" width="100" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="4Y9-wB-AQk"/>
+                            <constraint firstAttribute="width" constant="100" id="Q46-Ir-2Rg"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -46,9 +47,8 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="iul-Dk-KR6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="9OK-wV-gFc"/>
-                    <constraint firstItem="zmm-TM-uhb" firstAttribute="leading" secondItem="iul-Dk-KR6" secondAttribute="trailing" constant="8" id="IU0-d4-mdZ"/>
-                    <constraint firstItem="zmm-TM-uhb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="110" id="Lsm-ez-jO2"/>
+                    <constraint firstItem="iul-Dk-KR6" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="9OK-wV-gFc"/>
+                    <constraint firstItem="zmm-TM-uhb" firstAttribute="leading" secondItem="iul-Dk-KR6" secondAttribute="trailing" constant="10" id="IU0-d4-mdZ"/>
                     <constraint firstItem="iul-Dk-KR6" firstAttribute="bottom" secondItem="zmm-TM-uhb" secondAttribute="bottom" id="M10-jH-mWa"/>
                     <constraint firstAttribute="bottom" secondItem="zmm-TM-uhb" secondAttribute="bottom" constant="2" id="YLL-5F-eQd"/>
                     <constraint firstItem="zmm-TM-uhb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="Zop-lr-2pm"/>
